# master-thesis-statistics

./: .gitignore  Makefile  README.md  generated_output_manager.py  index.json  justfile  pyproject.toml
.githooks/: pre-commit
experiments/: run_all.py
experiments/03_chapter/02_section/expsketch-custom-float-perf/: create_figure.py  data_for_figure_dataclass.py  experiment-idea.md  experiment.py
experiments/03_chapter/02_section/expsketch-float-lambda-range/: create_figure.py  data_for_figure_dataclass.py  experiment-idea.md  experiment.py
experiments/03_chapter/02_section/expsketch-jaccard-mantissa/: create_figure.py  data_for_figure_dataclass.py  experiment-idea.md  experiment.py
experiments/03_chapter/02_section/expsketch-mantissa-accuracy/: create_figure.py  data_for_figure_dataclass.py  experiment-idea.md  experiment.py
experiments/03_chapter/02_section/expsketch-register-histogram/: create_figure.py  data_for_figure_dataclass.py  experiment-idea.md  experiment.py
experiments/03_chapter/02_section/float-formats-table-macheps/: create_figure.py  data_for_figure_dataclass.py  experiment-idea.md  experiment.py
guidance/: draft_quality_review.md  experiments.md  plot.md
schema/: create_figure_py_contract.md  directory_schema_layout.yaml  experiment_idea_schema.json  experiment_py_contract.md  experiment_py_frontmatter_yaml_schema.json  experiments_index_schema.json
scripts/: regenerate_index.sh  run_experiments.py  validate_create_figure.py  validate_directory_schema.py  validate_experiment_idea.py  validate_experiments.py  validate_frontmatter.py
(+111 files in other folders)
